# chat-rooms_React_FastAPI

./: .gitignore  README.md  nx.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/backend/: project.json  pyproject.toml
apps/backend/scripts/: export_openapi.py
apps/chat-rooms_react_FastAPI/: .eslintrc.json  jest.config.ts  project.json  tsconfig.json
apps/chat-rooms_react_FastAPI-e2e/: playwright.config.ts  project.json
apps/chat-rooms_react_FastAPI/src/app/: layout.tsx  page.tsx
apps/frontend/: project.json
apps/frontend-e2e/: playwright.config.ts  project.json
apps/frontend/src/app/: layout.tsx  page.tsx
