[tool.nx]
autoActivate = true

[tool.poetry]
package-mode = false

  [tool.poetry.dependencies]
  python = ">=3.10,<3.12"

    [tool.poetry.dependencies."apps/backend"]
    path = "apps/backend"
    develop = true

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
autopep8 = "2.0.2"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
